--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -21,12 +21,8 @@
 .button {
 	background: none repeat scroll 0 0 #45ac9d;
 }
-#masthead nav ul li {
-	float:left;
-	margin:0 10px;
-	
-}
-}
+
+
 
 /* blog post on homepage */
 .recent-posts {
@@ -54,21 +50,38 @@
 }
 /* Projects */
 
-article.project {
-	margin:40px 0 0;
+.project {
+	clear: both;
 }
+.project h2 {
+	font: 700 1.5em/1.5 'Open Sans Semibold';
+}
+.project h4 {
+	font: 400 .875em/1.25 'Open Sans';
+} 
+project.h4 span {
+	color: #878787;
+}
+.project-sidebar p{
+	margin: 2em 0;
+}
+div.project-images {
+	margin-top: 3em;
+}
+div.project-images img {
+	width: 100%;
+	margin-bottom: 30125em;
+	border: 1px solid #dddddd;
+}
+/*end of project*/
+
 
 aside.project-sidebar{
 	float:left;
-	width:314px;
-	margin: 0 40px 0 0;
+	width:34%;
+	margin: 0 6% 0 0;
 }
 div.project-images {
 	float:left;
-	width:606px;
-}
-div.project-images {
-	display:block;
-	margin-bottom:50px
-	border:1px solid #dddddd;
+	width:60%;
 }
