--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -5,23 +5,23 @@
  Author:       Your Name!
  Author URI:   http://example.com
  Template:     accelerate-theme
- Version:      1.0.0
+ Version:      2.0.0
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  accelerate-theme-child
 */
+
 @import url("../accelerate-theme/style.css");
 
 .home-page {
     background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
 }
-
 #masthead {
     background: none repeat scroll 0 0 #45ac9d;
 }
-
 .button {
 	background: none repeat scroll 0 0 #45ac9d;
 }
+
 /* blog post on homepage */
 
 .blog-post h4 {
@@ -33,12 +33,11 @@
 .blog-post h3 {
 	font-size: 1.5em;
 }
-.read-more-link {
-    font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
+.blog-post .read-more-link {
+	font: 700 15px 'Montserrat';
 	color: #45ac9d;
 	text-transform: uppercase;
 }
-
 /* Media Queries */
 @media (min-width: 768px) {
     .blog-post {
