--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -16,7 +16,7 @@
     background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
 }
 #masthead {
-    background: none repeat scroll 0 0 #red;
+    background: none repeat scroll 0 0 red;
 }
 .button {
 	background: none repeat scroll 0 0 #45ac9d;
