--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -16,10 +16,10 @@
     background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
 }
 #masthead {
-    background: none repeat scroll 0 0 #45ac9d;
+    background: none repeat scroll 0 0 red;
 }
 .button {
-	background: none repeat scroll 0 0 #45ac9d;
+	background: none repeat scroll 0 0 red;
 }
 
 /* blog post on homepage */
