--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -16,14 +16,13 @@
     background: url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
 }
 #masthead {
-    background: none repeat scroll 0 0 red;
+    background: none repeat scroll 0 0 #45ac9d;
 }
 .button {
-	background: none repeat scroll 0 0 red;
+	background: none repeat scroll 0 0 #45ac9d;
 }
 
 /* blog post on homepage */
-
 .blog-post h4 {
 	font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
 	color: #a6a6a6;
@@ -33,16 +32,53 @@
 .blog-post h3 {
 	font-size: 1.5em;
 }
-.blog-post .read-more-link {
-	font: 700 15px 'Montserrat';
+.read-more-link {
+    font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
 	color: #45ac9d;
 	text-transform: uppercase;
 }
+
+/*Case Studies*/
+.case-study {
+    clear: both;
+}
+.case-study h2 {
+    font: 700 1.5em/1.5 'Open Sans Semibold';
+}
+.case-study h4 {
+    font: 400 .875em/1.25 'Open Sans';
+    margin: 1em 0;
+}
+.case-study h4 span {
+    color: #878787;
+}
+.case-study-sidebar p {
+    margin: 2em 0;
+}
+div.case-study-images {
+	margin-top: 3em;
+}
+div.case-study-images img {
+    width: 100%;
+	margin-bottom: 3.125em;
+	border: 1px solid #dddddd;
+}
+/*END Case Studies*/
+
 /* Media Queries */
 @media (min-width: 768px) {
     .blog-post {
     	width: 50%;
     	float: left;
         margin-bottom: 2em;
-	}
+    }
+    aside.case-study-sidebar {
+        float: left;
+        width: 34%;
+        margin: 0 6% 0 0;
+    }
+    div.case-study-images {
+        float: left;
+        width: 60%;
+    }
 }
