--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -22,6 +22,37 @@
 	background: none repeat scroll 0 0 #45ac9d;
 }
 
+/* featured work */
+.featured-work .site-content {
+    margin: 6em auto;
+}
+.featured-work h4 {
+    font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
+	text-align: center;
+	text-transform: uppercase;
+	margin-bottom: 2.25em;
+}
+.homepage-featured-work {
+	list-style: none;
+	margin: 0 auto;
+	padding: 0;
+	text-align: center;
+	width: 100%;
+}
+.individual-featured-work {
+    margin-bottom: 2em;
+}
+.individual-featured-work a {
+	display: block;
+}
+.individual-featured-work h3 {
+    font: 500 1em/1.75 'Open Sans', Arial, sans-serif;
+}
+
+
+
+
+
 /* blog post on homepage */
 .blog-post h4 {
 	font: 700 1em/1.75 'Montserrat', 'Open Sans', Arial, sans-serif;
@@ -67,6 +98,20 @@ div.case-study-images img {
 
 /* Media Queries */
 @media (min-width: 768px) {
+	 .featured-work .site-content {
+        display: block;
+        margin: auto auto 3em;
+    }
+    .individual-featured-work {
+    	float: left;
+    }
+    .individual-featured-work {
+        width: 32%;
+        margin-right: 2%;
+    }
+    li.individual-featured-work:last-of-type {
+        margin-right: 0;
+    }
     .blog-post {
     	width: 50%;
     	float: left;
